# takehome

./: Cargo.toml  test.txt
src/: carbon.rs  constants.rs  covid.rs  main.rs
