[package]
name = "takehome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.32.0", features = ["full"]}
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
serde = "1.0.186"
serde_derive = "1.0.186"
once_cell = "1.18.0"
serde_json = "1.0.105"
urlencoding= "2.1.3"
flate2="1.0.27"
chrono="0.4.26"